Adiciona página sobre Python e atualiza navegação

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
           <a href="loading.html?target=CSS.html" class="nav-link">CSS</a>
           <a href="loading.html?target=JavaScript.html" class="nav-link">JavaScript</a>
           <a href="loading.html?target=java.html" class="nav-link">Java</a>
+          <a href="loading.html?target=python.html" class="nav-link">Python</a>
           <a href="loading.html?target=sobre.html" class="nav-link">Análise do Código</a>
         </nav>
         <div class="header-actions">
@@ -98,6 +99,19 @@
   </ul>
   <a href="java.html" class="botao">Acessar JAVA</a>
 </div>
+
+<div class="cartao">
+  <img src="img/python_logo.png" alt="Python" class="cartao-icone">
+  <h2>PYTHON</h2>
+  <ul>
+    <li>O que é Python?</li>
+    <li>Sintaxe Simples</li>
+    <li>Versatilidade</li>
+    <li>Bibliotecas</li>
+    <li>Comunidade</li>
+  </ul>
+  <a href="python.html" class="botao">Acessar PYTHON</a>
+</div>
   </aside>
   
     <main class="conteudo-principal">
@@ -122,6 +136,7 @@
           <img src="img/css_transparent.png" alt="Logo CSS em roxo" style="width: 200px; border-radius: 20px; margin: 10px;">
           <img src="img/js_logo.png" alt="Logo CSS em roxo" style="width: 200px; border-radius: 20px; margin: 10px;">
           <img src="img/java_logo.png" alt="Logo java em roxo" style="width: 200px; border-radius: 20px; margin: 10px;">
+          <img src="img/python_logo.png" alt="Logo python em roxo" style="width: 200px; border-radius: 20px; margin: 10px;">
         </div>
       </div>
   
