--- a/java.html
+++ b/java.html
@@ -23,6 +23,7 @@
           <a href="loading.html?target=CSS.html" class="nav-link">CSS</a>
           <a href="loading.html?target=JavaScript.html" class="nav-link">JavaScript</a>
           <a href="loading.html?target=java.html" class="nav-link active">Java</a>
+          <a href="loading.html?target=python.html" class="nav-link">Python</a>
           <a href="loading.html?target=sobre.html" class="nav-link ">Análise do Código</a>
         </nav>
         <div class="header-actions">
@@ -120,6 +121,19 @@
     <li>Tratamento de Exceções</li>
   </ul>
   <a href="java.html" class="botao">Acessar JAVA</a>
+</div>
+
+<div class="cartao">
+  <img src="img/python_logo.png" alt="Python" class="cartao-icone">
+  <h2>PYTHON</h2>
+  <ul>
+    <li>O que é Python?</li>
+    <li>Sintaxe Simples</li>
+    <li>Versatilidade</li>
+    <li>Bibliotecas</li>
+    <li>Comunidade</li>
+  </ul>
+  <a href="python.html" class="botao">Acessar PYTHON</a>
 </div>
   </aside>
   
