--- a/login.html
+++ b/login.html
@@ -333,6 +333,7 @@
                 <a href="CSS.html" class="nav-link">CSS</a>
                 <a href="JavaScript.html" class="nav-link">JavaScript</a>
                 <a href="java.html" class="nav-link">Java</a>
+                <a href="python.html" class="nav-link">Python</a>
             </nav>
         </div>
     </header>
