Adicionado menu expansível (dropdown) para as linguagens de programação

--- a/swift.html
+++ b/swift.html
@@ -15,14 +15,25 @@
           <img src="img/logo.png" alt="Prog. Master Max" class="logo">
           <span class="site-title">Prog. Master Max</span>
         </div>
-        <nav class="main-nav">
+                <nav class="main-nav">
           <a href="loading.html?target=index.html" class="nav-link">Início</a>
-          <a href="loading.html?target=HTML.html" class="nav-link">HTML</a>
-          <a href="loading.html?target=CSS.html" class="nav-link">CSS</a>
-          <a href="loading.html?target=JavaScript.html" class="nav-link">JavaScript</a>
-          <a href="loading.html?target=java.html" class="nav-link">Java</a>
-          <a href="loading.html?target=python.html" class="nav-link">Python</a>
-          <a href="loading.html?target=swift.html" class="nav-link active">Swift</a>
+          <div class="dropdown">
+            <a href="#" class="nav-link dropdown-toggle">Linguagens</a>
+            <div class="dropdown-content">
+              <a href="loading.html?target=HTML.html">HTML</a>
+              <a href="loading.html?target=CSS.html">CSS</a>
+              <a href="loading.html?target=JavaScript.html">JavaScript</a>
+              <a href="loading.html?target=java.html">Java</a>
+              <a href="loading.html?target=python.html">Python</a>
+              <a href="loading.html?target=c.html">C</a>
+              <a href="loading.html?target=cpp.html">C++</a>
+              <a href="loading.html?target=csharp.html">C#</a>
+              <a href="loading.html?target=php.html">PHP</a>
+              <a href="loading.html?target=ruby.html">Ruby</a>
+              <a href="loading.html?target=go.html">Go</a>
+              <a href="loading.html?target=swift.html">Swift</a>
+            </div>
+          </div>
           <a href="loading.html?target=sobre.html" class="nav-link">Análise do Código</a>
         </nav>
         <div class="header-actions">
