Fix HTML formatting in index.html

--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
               <a href="loading.html?target=JavaScript.html">JavaScript</a>
               <a href="loading.html?target=java.html">Java</a>
               <a href="loading.html?target=python.html">Python</a>
+            </div>
+            <div class="dropdown-content">
               <a href="loading.html?target=c.html">C</a>
               <a href="loading.html?target=cpp.html">C++</a>
               <a href="loading.html?target=csharp.html">C#</a>
