feat: transformar menu dropdown em 3 colunas com ícones de linguagens

--- a/index.html
+++ b/index.html
@@ -23,18 +23,54 @@
           <div class="dropdown">
             <a href="#" class="nav-link dropdown-toggle">Linguagens</a>
             <div class="dropdown-content">
-              <a href="loading.html?target=HTML.html">HTML</a>
-              <a href="loading.html?target=CSS.html">CSS</a>
-              <a href="loading.html?target=JavaScript.html">JavaScript</a>
-              <a href="loading.html?target=java.html">Java</a>
-              <a href="loading.html?target=python.html">Python</a>
-              <a href="loading.html?target=c.html">C</a>
-              <a href="loading.html?target=cpp.html">C++</a>
-              <a href="loading.html?target=csharp.html">C#</a>
-              <a href="loading.html?target=php.html">PHP</a>
-              <a href="loading.html?target=ruby.html">Ruby</a>
-              <a href="loading.html?target=go.html">Go</a>
-              <a href="loading.html?target=swift.html">Swift</a>
+              <div class="dropdown-item">
+                <img src="img/html_transparent.png" alt="HTML" class="dropdown-icon">
+                <a href="loading.html?target=HTML.html">HTML</a>
+              </div>
+              <div class="dropdown-item">
+                <img src="img/css_transparent.png" alt="CSS" class="dropdown-icon">
+                <a href="loading.html?target=CSS.html">CSS</a>
+              </div>
+              <div class="dropdown-item">
+                <img src="img/js_logo.png" alt="JavaScript" class="dropdown-icon">
+                <a href="loading.html?target=JavaScript.html">JavaScript</a>
+              </div>
+              <div class="dropdown-item">
+                <img src="img/java_logo.png" alt="Java" class="dropdown-icon">
+                <a href="loading.html?target=java.html">Java</a>
+              </div>
+              <div class="dropdown-item">
+                <img src="img/python_logo.png" alt="Python" class="dropdown-icon">
+                <a href="loading.html?target=python.html">Python</a>
+              </div>
+              <div class="dropdown-item">
+                <img src="img/c_logo.png" alt="C" class="dropdown-icon">
+                <a href="loading.html?target=c.html">C</a>
+              </div>
+              <div class="dropdown-item">
+                <img src="img/cpp_logo.png" alt="C++" class="dropdown-icon">
+                <a href="loading.html?target=cpp.html">C++</a>
+              </div>
+              <div class="dropdown-item">
+                <img src="img/csharp_logo.png" alt="C#" class="dropdown-icon">
+                <a href="loading.html?target=csharp.html">C#</a>
+              </div>
+              <div class="dropdown-item">
+                <img src="img/php_logo.png" alt="PHP" class="dropdown-icon">
+                <a href="loading.html?target=php.html">PHP</a>
+              </div>
+              <div class="dropdown-item">
+                <img src="img/ruby_logo.png" alt="Ruby" class="dropdown-icon">
+                <a href="loading.html?target=ruby.html">Ruby</a>
+              </div>
+              <div class="dropdown-item">
+                <img src="img/go_logo.png" alt="Go" class="dropdown-icon">
+                <a href="loading.html?target=go.html">Go</a>
+              </div>
+              <div class="dropdown-item">
+                <img src="img/swift_logo.png" alt="Swift" class="dropdown-icon">
+                <a href="loading.html?target=swift.html">Swift</a>
+              </div>
             </div>
           </div>
           <a href="loading.html?target=sobre.html" class="nav-link">Análise do Código</a>
