style: aplicar recomendações de UX/UI do relatório
- Melhoria no hover e feedback visual do dropdown de linguagens
- Adição de responsividade ao menu dropdown (1, 2 e 3 colunas)
- Implementação de atributos ARIA e navegação por teclado para acessibilidade
- Ajuste na hierarquia tipográfica (tamanhos de h1, h2, h3)
- Melhoria na legibilidade com ajuste de line-height
- Atualização do botão flutuante 'Voltar' com ícone e melhor alinhamento

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <nav class="main-nav">
           <a href="loading.html?target=index.html" class="nav-link active">Início</a>
           <div class="dropdown">
-            <a href="#" class="nav-link dropdown-toggle">Linguagens</a>
+            <a href="#" class="nav-link dropdown-toggle" aria-haspopup="true" aria-expanded="false">Linguagens</a>
             <div class="dropdown-content">
               <div class="dropdown-item">
                 <img src="img/html_transparent.png" alt="HTML" class="dropdown-icon">
