🖤 Transformação completa para ScriptHub - Tema IDE Noturno
✨ Alterações principais:
- Rebranding completo: Prog. Master Max → ScriptHub 🖤
- Nova paleta de cores inspirada em VS Code Dark+, GitHub Dark e Dracula
- Fundo principal: #0D1117 (quase preto)
- Destaques: #58A6FF (azul), #BB9AF7 (lilás), #7EE0B5 (verde menta)
- Texto otimizado: #E5E9F0 (principal), #B0BEC5 (secundário)

🎨 Design e UX:
- CSS completamente reescrito com variáveis CSS customizadas
- Tipografia moderna: Inter + JetBrains Mono
- Melhorias de acessibilidade (ARIA, navegação por teclado)
- Responsividade aprimorada para mobile/tablet/desktop
- Animações e transições suaves
- Scrollbar customizada

📦 Novos recursos:
- Favicon SVG com identidade ScriptHub
- README.md atualizado com documentação completa
- Dropdown de linguagens com layout em grid 3 colunas
- Cards com efeitos hover melhorados
- Código pré-formatado com sintaxe destacada

♿ Acessibilidade:
- Alto contraste para melhor legibilidade
- Foco visível para navegação por teclado
- ARIA attributes implementados
- Suporte a leitores de tela

📱 Responsividade:
- Breakpoints otimizados (768px, 480px)
- Menu adaptável para telas pequenas
- Grid responsivo para conteúdo
- Imagens otimizadas

🚀 Performance:
- CSS organizado em seções lógicas
- Transições otimizadas
- Código limpo e comentado

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Prog. Master Max</title>
-  <link href="https://fonts.googleapis.com/css2?family=Cinzel&family=Open+Sans&display=swap" rel="stylesheet">
+  <link rel="icon" type="image/svg+xml" href="favicon.svg">
+  <title>ScriptHub 🖤 - Plataforma de Aprendizado de Programação</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=JetBrains+Mono:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link href="style.css" rel="stylesheet">
  
  
@@ -15,8 +16,8 @@
     <header class="site-header">
       <div class="header-container">
         <div class="logo-container">
-          <img src="img/logo.png" alt="Prog. Master Max" class="logo">
-          <span class="site-title">Prog. Master Max</span>
+          <img src="img/logo.png" alt="ScriptHub" class="logo">
+          <span class="site-title">ScriptHub 🖤</span>
         </div>
                 <nav class="main-nav">
           <a href="loading.html?target=index.html" class="nav-link active">Início</a>
@@ -96,15 +97,15 @@
 
      
   
-      <h1>Prog. Master Max</h1>
+      <h1>ScriptHub 🖤</h1>
   
       <div class="conteiner-conteudo">
         <div class="conteudo">
           <div class="explicacao">
             <div class="introducao">
-              <h3>Domine os fundamentos da web de forma prática e eficiente</h3>
-              <h3>Aprenda HTML e CSS do zero com explicações claras, exemplos interativos e projetos reais</h3>
-              <h3>Desenvolvido para iniciantes que querem construir uma base sólida no desenvolvimento web</h3>
+              <h3>🚀 Plataforma completa para aprender programação do zero</h3>
+              <h3>💻 Domine linguagens modernas com exemplos práticos e interativos</h3>
+              <h3>🎯 Conteúdo estruturado para desenvolvedores iniciantes e intermediários</h3>
             </div>
           </div>
         </div>
