--- a/sobre.html
+++ b/sobre.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Análise do Código - Prog. Master Max</title>
+  <link rel="icon" type="image/svg+xml" href="favicon.svg">
+  <title>Análise do Código - ScriptHub 🖤</title>
   <link href="https://fonts.googleapis.com/css2?family=Cinzel&family=Open+Sans&display=swap" rel="stylesheet">
   <link href="style.css" rel="stylesheet">
 </head>
@@ -12,8 +13,8 @@
   <header class="site-header">
     <div class="header-container">
       <div class="logo-container">
-        <img src="img/logo.png" alt="Prog. Master Max" class="logo">
-        <span class="site-title">Prog. Master Max</span>
+        <img src="img/logo.png" alt="ScriptHub 🖤" class="logo">
+        <span class="site-title">ScriptHub 🖤</span>
       </div>
               <nav class="main-nav">
           <a href="loading.html?target=index.html" class="nav-link">Início</a>
@@ -220,7 +221,7 @@
 &lt;head&gt;
   &lt;meta charset="UTF-8"&gt;
   &lt;meta name="viewport" content="width=device-width, initial-scale=1.0"&gt;
-  &lt;title&gt;Prog. Master Max&lt;/title&gt;
+  &lt;title&gt;ScriptHub 🖤&lt;/title&gt;
   &lt;link href="https://fonts.googleapis.com/css2?family=Cinzel&family=Open+Sans&display=swap" rel="stylesheet"&gt;
   &lt;link href="style.css" rel="stylesheet"&gt;
 &lt;/head&gt;
@@ -248,8 +249,8 @@
 &lt;header class="site-header"&gt;
   &lt;div class="header-container"&gt;
     &lt;div class="logo-container"&gt;
-      &lt;img src="img/logo.png" alt="Prog. Master Max" class="logo"&gt;
-      &lt;span class="site-title"&gt;Prog. Master Max&lt;/span&gt;
+      &lt;img src="img/logo.png" alt="ScriptHub 🖤" class="logo"&gt;
+      &lt;span class="site-title"&gt;ScriptHub 🖤&lt;/span&gt;
     &lt;/div&gt;
     &lt;nav class="main-nav"&gt;
       &lt;a href="loading.html?target=index.html" class="nav-link active"&gt;Início&lt;/a&gt;
@@ -300,7 +301,7 @@
       <h2>4. Conteúdo Principal</h2>
       <pre><code>
 &lt;main class="conteudo-principal"&gt;
-  &lt;h1&gt;Prog. Master Max&lt;/h1&gt;
+  &lt;h1&gt;ScriptHub 🖤&lt;/h1&gt;
   
   &lt;div class="conteiner-conteudo"&gt;
     &lt;div class="conteudo"&gt;
@@ -498,7 +499,7 @@ body {
     </section>
     
     <footer class="rodape">
-      <p>© 2025 Prog. Master Max - Todos os direitos reservados</p>
+      <p>© 2025 ScriptHub 🖤 - Todos os direitos reservados</p>
       <p>Desenvolvido com 💜 pelos estudantes de desenvolvimento web (é IA)</p>
       <div class="redes-sociais">
         <a href="#"><img src="github-icon.png" alt="GitHub"></a>
