--- a/csharp.html
+++ b/csharp.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/svg+xml" href="favicon.svg">
   <title>C# Master - Do Básico ao Avançado</title>
   <link href="https://fonts.googleapis.com/css2?family=Cinzel&family=Open+Sans&display=swap" rel="stylesheet">
   <link href="style.css" rel="stylesheet">
@@ -12,8 +13,8 @@
     <header class="site-header">
       <div class="header-container">
         <div class="logo-container">
-          <img src="img/logo.png" alt="Prog. Master Max" class="logo">
-          <span class="site-title">Prog. Master Max</span>
+          <img src="img/logo.png" alt="ScriptHub 🖤" class="logo">
+          <span class="site-title">ScriptHub 🖤</span>
         </div>
                 <nav class="main-nav">
           <a href="loading.html?target=index.html" class="nav-link">Início</a>
