--- a/loading.html
+++ b/loading.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Carregando | Prog. Master Max</title>
+  <link rel="icon" type="image/svg+xml" href="favicon.svg">
+  <title>Carregando | ScriptHub 🖤</title>
   <style>
     body {
       margin: 0;
@@ -74,8 +75,8 @@
 </head>
 <body>
   <div class="loading-container">
-    <img src="img/logo.png" alt="Prog. Master Max" class="logo-loading" >
-    <h1>Prog. Master Max</h1>
+    <img src="img/logo.png" alt="ScriptHub 🖤" class="logo-loading" >
+    <h1>ScriptHub 🖤</h1>
     <div class="progress-container">
       <div class="progress-bar" id="progress-bar"></div>
     </div>
